--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,10 +6,10 @@
         <div class="mini-navbar" *ngIf="!isLogged">
             <ul>
                 <li>
-                    <a href="#" routerLink="/login">Login</a>
+                    <a href="#" routerLink="/user/login">Login</a>
                 </li>
                 <li>
-                    <a href="#" routerLink="/register">Register</a>
+                    <a href="#" routerLink="/user/register">Register</a>
                 </li>
             </ul>
         </div>
