--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -16,7 +16,7 @@
         <div class="mini-navbar" *ngIf="isLogged">
             <ul>
                 <li>
-                    <div>Hello, Username</div>
+                    <a routerLink="/user/profile">Hello, Username</a>
                 </li>
                 <li>
                     <a href="#" (click)="logoutHandler()">Logout</a>
