--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -23,10 +23,10 @@
                 Password must be at least 4 characters!
             </p> -->
 
-        <button type="button">Login</button>
+        <button type="button" (click)="loginHandler()">Login</button>
         <p class="text-center">
             Have an account?
-            <a href="#" routerLink="/register">Register</a>
+            <a href="#" routerLink="/user/register">Register</a>
         </p>
     </fieldset>
 </form>
