--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,13 +6,13 @@
         <div class="logged" *ngIf="!isLogged">
             <ul>
                 <li>
-                    <a href="#" routerLink="/login">
+                    <a href="#" routerLink="/user/login">
                         <i class="fas fa-sign-in-alt"></i>
                         Login
                     </a>
                 </li>
                 <li>
-                    <a href="#" routerLink="/register">
+                    <a href="#" routerLink="/user/register">
                         <i class="fas fa-user-plus"></i>
                         Register
                     </a>
