--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -52,7 +52,7 @@
         <button type="button">Create Account</button>
         <p class="text-center">
             Have an account?
-            <a href="#" routerLink="/login">Log In</a>
+            <a routerLink="/user/login">Log In</a>
         </p>
     </fieldset>
 </form>
