--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -49,7 +49,7 @@
             <input type="password" name="rePassword" id="rePassword" placeholder="******">
         </p>
         <!-- <p class="error">Repeat Password does not match password!</p> -->
-        <button type="button">Create Account</button>
+        <button type="button" (click)="registerHandler()">Create Account</button>
         <p class="text-center">
             Have an account?
             <a routerLink="/user/login">Log In</a>
